# LmaoEngine

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  ShaderCompile.cmake
scripts/: setup.bat  setup.sh
shaders/debug/: triangle.frag  triangle.vert
shaders/deferred/: bloom_downsample.frag  bloom_upsample.frag  fullscreen.vert  fxaa.frag  gbuffer.frag  gbuffer.vert  lighting.frag  motion.frag  shadow.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  taa.frag  tonemap.frag
shaders/forward/: forward.frag  forward.vert
shaders/ibl/: brdf_lut.comp  irradiance.comp  prefilter.comp  sky_cubemap.comp
src/: main.cpp
src/assets/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/core/: Engine.cpp  Engine.h  Input.cpp  Input.h  Log.h  Timer.h  Window.cpp  Window.h
src/math/: MathUtils.h
src/scene/: Camera.cpp  Camera.h  Entity.h  Light.h  Scene.cpp  Scene.h  Transform.h
src/vulkan/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  DescriptorManager.cpp  DescriptorManager.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  ShaderModule.cpp  ShaderModule.h  Swapchain.cpp  Swapchain.h  SyncObjects.cpp  SyncObjects.h  VolkImpl.cpp  VulkanContext.cpp  VulkanContext.h  VulkanUtils.h
